# ProjetDep

./: .RData  .Rhistory  .gitignore  ACP.ipynb  Black_Bachelier-interets.ipynb  Black_Bachelier.ipynb  Etude_Statistique.ipynb  Etude_Statistique_Output.ipynb  Markhov.ipynb  MovingAverage.ipynb  RDV arturo AXA 31:03.pages  README.md  Segmentation.ipynb  SegmentationBachelier.ipynb  comp_interet.csv  comp_interet2.csv  swaphist.csv  test_donnees.ipynb  tx_interet.ipynb  tx_interet_output.ipynb
.ipynb_checkpoints/: Etude_Statistique-checkpoint.ipynb  Markhov-checkpoint.ipynb  MovingAverage-checkpoint.ipynb  test_donnees-checkpoint.ipynb  tx_interet-checkpoint.ipynb
RND/: RND.ipynb
RND/Implementation/: CMakeLists.txt
RND/Implementation/src/: CMakeLists.txt  main.cpp  polynome.cpp  polynome.h  tools.cpp  tools.h
RND/Implementation/tests/: test_c.cpp
